--- a/DEVCONNECTOR/package.json
+++ b/DEVCONNECTOR/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "project-",
+  "name": "devconnector",
   "version": "1.0.0",
-  "description": "Social Networking Application",
+  "description": "Social network for developers",
   "main": "server.js",
   "scripts": {
     "start": "node server",
@@ -10,29 +10,20 @@
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Nadoshka/Project.git"
-  },
-  "author": "Nadin",
+  "author": "Brad Traversy",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/Nadoshka/Project/issues"
-  },
-  "homepage": "https://github.com/Nadoshka/Project#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "config": "^3.2.2",
-    "express": "^4.17.1",
-    "express-validator": "^6.2.0",
+    "config": "^3.1.0",
+    "express": "^4.16.4",
+    "express-validator": "^5.3.1",
     "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.7.1",
-    "redux-thunk": "^2.3.0",
+    "mongoose": "^5.5.1",
     "request": "^2.88.0"
   },
   "devDependencies": {
-    "concurrently": "^4.1.2",
-    "nodemon": "^1.19.2"
+    "concurrently": "^4.1.0",
+    "nodemon": "^1.18.11"
   }
 }
