--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "devconnector",
+  "name": "project",
   "version": "1.0.0",
   "description": "Social network for developers",
   "main": "server.js",
